@@ -50,8 +50,8 @@ import got.common.entity.essos.volantis.GOTEntityVolantisLevymanArcher;
 import got.common.entity.essos.volantis.GOTEntityVolantisSoldier;
 import got.common.entity.essos.volantis.GOTEntityVolantisSoldierArcher;
 import got.common.entity.essos.yiti.*;
-import got.common.entity.other.GOTEntityUlthosSpider;
 import got.common.entity.other.GOTEntityNPC;
+import got.common.entity.other.GOTEntityUlthosSpider;
 import got.common.entity.other.GOTEntityWerewolf;
 import got.common.entity.sothoryos.sothoryos.GOTEntitySothoryosBlowgunner;
 import got.common.entity.sothoryos.sothoryos.GOTEntitySothoryosWarrior;
